# acetaminophen-autism-biomodel

./: readme.md
biomodel/: acetaminophen-autism-eeg.xml  acetaminophen-autism-endocrine.xml  acetaminophen-autism.xml  myelination_40weeks.yml
biomodels_wasm/: Cargo.toml  README.md  package.json  test_sample.js
biomodels_wasm/examples/node/: index.js  package.json
biomodels_wasm/examples/web/: index.html
biomodels_wasm/scripts/: build.sh
biomodels_wasm/src/: lib.rs
biomodels_wasm/src/models/: mod.rs
biomodels_wasm/src/parser/: mod.rs
biomodels_wasm/src/simulator/: mod.rs
biomodels_wasm/src/utils/: mod.rs
constructive_criticism/: notes.md
data/: hormone_curves.csv
diagrams/: mechanistic-pathways.html
publication/: reasearch.md
rust_wasm/: implementation_plan.md  initial_ideation.md
synthea/config/simulations/: myelination.yml  myelination_2nd_trimester.yml  myelination_periodic.yml  myelination_simple.yml  myelination_stable.yml
synthea/src/main/resources/physiology/models/: APAP_Myelination_Model.xml
whitepaper_src/: AcetaminophenMyelination.aux  AcetaminophenMyelination.fdb_latexmk  AcetaminophenMyelination.fls  AcetaminophenMyelination.out  AcetaminophenMyelination.tex  EndocrineDisruptorAddendum.tex
