[package]
name = "biomodels-wasm"
version = "0.1.0"
authors = ["BioModels WASM"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true